Releaser kontrakt med java 15.